# MN_Projekt_zaliczeniowy

./: README.md
AGH_Numerical_Methods/: CMakeLists.txt  Makefile  README.md
AGH_Numerical_Methods/examples/: CMakeLists.txt  example_differential_equations.cpp  example_integration.cpp  example_interpolation.cpp
AGH_Numerical_Methods/include/: approximation.h  differential_equations.h  integration.h  interpolation.h  linear_systems.h  nonlinear_equations.h  numerical_methods.h
AGH_Numerical_Methods/src/: CMakeLists.txt  approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_systems.cpp  nonlinear_equations.cpp  numerical_methods.cpp
AGH_Numerical_Methods/tests/: CMakeLists.txt  a.out  run_tests  run_tests.cpp  test_approximation.cpp  test_differential_equations.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_systems.cpp  test_nonlinear_equations.cpp
